fixed quote on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -12150,7 +12150,7 @@ a {
 }
 
 .hero-2 .intro-desc-right {
-  padding-left: 15rem;
+  padding-left: 13rem;
   padding-top: 0rem;
   bottom: 20px;
   left: 20px;
